Add ThemeManager and Routes

--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <!-- TODO Selfhost Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/MudBlazor.ThemeManager/MudBlazorThemeManager.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -24,6 +25,7 @@
 
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
     <script src="_framework/blazor.webassembly.js"></script>
 
 </body>
