--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="_content/MudBlazor.ThemeManager/MudBlazorThemeManager.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/mud_customize.css" rel="stylesheet" />
     <link href="NetEvent.Client.styles.css" rel="stylesheet" />
 </head>
 
