Add TinyMce as WYSIWYG Editor

--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -29,6 +29,9 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.server.js"></script>
+    <!--<script src="lib/tinymce/tinymce.min.js"></script>-->
+    <script src="_content/TinyMCE.Blazor/tinymce-blazor.js"></script>
 
 </body>
 
