--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -15,7 +15,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/mud_customize.css" rel="stylesheet" />
     <link href="NetEvent.Client.styles.css" rel="stylesheet" />
-    <link href="netevent.css" rel="stylesheet" />
+    <link href="css/netevent.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -28,6 +28,7 @@
     </div>
 
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/Microsoft.AspNetCore.Components.Web.Extensions/headManager.js"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_framework/blazor.server.js"></script>
