--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -15,7 +15,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/mud_customize.css" rel="stylesheet" />
     <link href="NetEvent.Client.styles.css" rel="stylesheet" />
-    <link href="css/netevent.css" rel="stylesheet" />
+    <!--<link href="css/netevent.css" rel="stylesheet" />-->
 </head>
 
 <body>
