--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -27,10 +27,9 @@
     </div>
 
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-    <script src="_content/Microsoft.AspNetCore.Components.Web.Extensions/headManager.js"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_framework/blazor.server.js"></script>
+    <!--<script src="_framework/blazor.server.js"></script>-->
     <script src="_content/TinyMCE.Blazor/tinymce-blazor.js"></script>
 
 </body>
