--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -31,6 +31,13 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/TinyMCE.Blazor/tinymce-blazor.js"></script>
 
+    <script>
+        Blazor.start().then(function () {
+            var customScript = document.createElement('script');
+            customScript.setAttribute('src', 'js/index.bundle.js');
+            document.head.appendChild(customScript);
+        });
+    </script>
 </body>
 
 </html>
