--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -34,7 +34,7 @@
     <script>
         Blazor.start().then(function () {
             var customScript = document.createElement('script');
-            customScript.setAttribute('src', 'js/index.bundle.js');
+            customScript.setAttribute('src', 'js/checkout.js');
             document.head.appendChild(customScript);
         });
     </script>
