Start add Checkout

--- a/NetEvent/Client/wwwroot/index.html
+++ b/NetEvent/Client/wwwroot/index.html
@@ -30,14 +30,14 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/TinyMCE.Blazor/tinymce-blazor.js"></script>
-
-    <script>
+    <script src="js/checkout.js"></script>
+  <!--  <script>
         Blazor.start().then(function () {
             var customScript = document.createElement('script');
             customScript.setAttribute('src', 'js/checkout.js');
             document.head.appendChild(customScript);
         });
-    </script>
+    </script>-->
 </body>
 
 </html>
